--- a/app/views/escort_records/index.html.erb
+++ b/app/views/escort_records/index.html.erb
@@ -1,1 +1,3 @@
-<%= button_to t('.create_escort_record'), action: :create %>
+<div class="container">
+  <%= button_to t('.create_escort_record'), { action: :create }, { class: 'button' } %>
+</div>
