--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,18 @@
 <%= content_for :stylesheets do %>
+    <!--[if IE 8]><%= stylesheet_link_tag('internet-explorer/ie8.css') %><![endif]-->
     <%= stylesheet_link_tag('application.css') %>
 <% end %>
+
+<% content_for :before_content do %>
+    <div class="container">
+      <div class="phase-banner">
+        <p>
+          <strong class="phase-tag">BETA</strong>
+          <span>This is a new service – your feedback will help us to improve it.</span>
+        </p>
+      </div>
+    </div>
+<% end %>
+
 
 <%= render template: 'layouts/moj_template' %>
