Extract generic form scaffold
The form_for declaration, url and action will be consistent across all
forms as will the displaying of error & flash messages so it has been
extracted out into the show template.

--- a/app/views/escorts/show.html.erb
+++ b/app/views/escorts/show.html.erb
@@ -1,1 +1,14 @@
-<%= render form.template %>
+<%= form_for form, url: form.url, method: :put do |f| %>
+
+  <%= flash.now[:success] || flash.now[:error] %>
+
+  <br />
+
+  <%- if form.errors.any? %>
+    <%= form.errors.full_messages %>
+  <% end %>
+
+  <%= render form.template, f: f %>
+
+  <%= f.submit 'Save' %>
+<% end %>
