--- a/app/views/escorts/index.html.erb
+++ b/app/views/escorts/index.html.erb
@@ -1,3 +1,5 @@
-<div class="container">
-  <%= button_to t('.create_escort'), { action: :create }, { class: 'button' } %>
+<div class="grid-row">
+  <div class="column-three-quarters">
+    <%= button_to t('.create_escort_button'), {action: :create}, {class: 'button'} %>
+  </div>
 </div>
