--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,16 +1,23 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_self
- */
+// GOV.UK Toolkit
+@import "grid_layout";
+@import "typography";
+@import "measurements";
+@import "colours";
+@import "typography";
+@import "conditionals";
+@import "design-patterns/breadcrumbs";
+@import "design-patterns/buttons";
+@import "design-patterns/alpha-beta";
 
-@import 'global';
+// GOV.UK Elements
+@import "elements/forms";
+@import "elements/forms/form-block-labels";
+@import "elements/forms/form-validation";
+
+// Application
+@import "phase_banner";
+@import "header";
+@import "layout";
+@import "forms";
+@import "errors";
+@import "confirmation";
