Integrate age calculation into summary page

--- a/app/views/escorts/summary/_prisoner_information.html.erb
+++ b/app/views/escorts/summary/_prisoner_information.html.erb
@@ -13,6 +13,10 @@
   <p><%= prisoner_information.date_of_birth %></p>
 </div>
 <div>
+  <p><%= t('.age') %></p>
+  <p><%= prisoner_information.age %></p>
+</div>
+<div>
   <p><%= t('.sex') %></p>
   <p><%= prisoner_information.sex %></p>
 </div>
