--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,6 @@
 @import "colours";
 @import "typography";
 @import "conditionals";
-@import "design-patterns/breadcrumbs";
 @import "design-patterns/buttons";
 @import "design-patterns/alpha-beta";
 
@@ -22,3 +21,4 @@
 @import "errors";
 @import "confirmation";
 @import "summary";
+@import "navigation";
