--- a/app/views/escorts/show.html.erb
+++ b/app/views/escorts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="grid-row">
   <div class="column-one-quarter">
-    &nbsp;
+    <%= render('shared/navigation') %>
   </div>
   <div class="column-three-quarters">
     <header>
