--- a/app/views/escorts/_identification.html.erb
+++ b/app/views/escorts/_identification.html.erb
@@ -25,7 +25,7 @@
       </label>
       <%= text_field_tag(
               'identification[date_of_birth][day]',
-              f.object.date_of_birth&.day,
+              f.object.date_of_birth_presenter.day,
               maxlength: 2,
               size: 2,
               class: 'form-control'
@@ -37,7 +37,7 @@
       </label>
       <%= text_field_tag(
               'identification[date_of_birth][month]',
-              f.object.date_of_birth&.month,
+              f.object.date_of_birth_presenter.month,
               maxlength: 2,
               size: 2,
               class: 'form-control'
@@ -49,7 +49,7 @@
       </label>
       <%= text_field_tag(
               'identification[date_of_birth][year]',
-              f.object.date_of_birth&.year,
+              f.object.date_of_birth_presenter.year,
               maxlength: 4,
               size: 4,
               class: 'form-control'
