Change PreviewController to become PdfsController

--- a/app/views/escorts/show.html.erb
+++ b/app/views/escorts/show.html.erb
@@ -4,7 +4,7 @@
     <div class="quick-actions">
       <h2 class="heading-small"><%= t('quick_actions.heading') %></h2>
       <ul>
-        <li><%= link_to(t('quick_actions.preview'), 'preview') %></li>
+        <li><%= link_to(t('quick_actions.preview'), pdf_path(escort)) %></li>
       </ul>
     </div>
   </div>
@@ -23,5 +23,3 @@
     <% end %>
   </div>
 </div>
-
-
