--- a/app/views/escorts/_risks.html.erb
+++ b/app/views/escorts/_risks.html.erb
@@ -3,17 +3,16 @@
     &nbsp;
   </div>
   <div class="column-three-quarters">
-    <header>
-      <h1><%= t('.heading') %></h1>
-    </header>
+    <fieldset class="inline">
     <% risks = %i[ to_self to_others violence from_others escape intolerant_behaviour prohibited_items ] %>
     <% risks.each do |risk| %>
-        <%= render('shared/risk', risk: risk) %>
+        <%= render('shared/risk', f: f, risk: risk) %>
     <% end %>
     <h2><%= t('.transit_heading') %></h2>
     <% transit_risks = %i[ disabilities allergies non_association ] %>
     <% transit_risks.each do |risk| %>
-        <%= render('shared/risk', risk: risk) %>
+        <%= render('shared/risk', f: f, risk: risk) %>
     <% end %>
+    </fieldset>
   </div>
 </div>
