Use consistent erb template style

--- a/app/views/shared/_risk.html.erb
+++ b/app/views/shared/_risk.html.erb
@@ -1,21 +1,23 @@
-<%= content_tag(:fieldset, class: 'js_has_optional_section') do %>
-    <%= content_tag(:div, class: 'form-group') do %>
-        <%= content_tag(:legend, class: 'form-label-bold') do %>
-            <%= content_tag(:span, t(".types.#{risk}")) %>
-            <%= radio_button_tag(risk, 'unknown', true, class: 'visuallyhidden') %>
-            <%= label_tag("#{risk}_unknown", 'Clear', class: 'unknown_value') %>
-        <% end %>
-        <%= content_tag(:div, class: 'form-group') do %>
-            <%= label_tag("#{risk}_yes", class: 'block-label inline') do %>
-                <%= radio_button_tag(risk, 'yes', false) %> Yes
-            <% end %>
-            <%= label_tag("#{risk}_no", class: 'block-label inline') do %>
-                <%= radio_button_tag(risk, 'no', false) %> No
-            <% end %>
-            <%= content_tag(:div, class: 'form-group optional-section') do %>
-                <%= label_tag("#{risk}_details", t('.labels.details')) %>
-                <%= content_tag(:textarea, autocomplete: 'off', class: 'form-control', id: "#{risk}_details") {} %>
-            <% end %>
-        <% end %>
-    <% end %>
-<% end %>
+<fieldset class="js_has_optional_section">
+  <div class="form-group">
+    <legend class="form-label-bold">
+      <span>
+        <%= t(".types.#{risk}") %>
+      </span>
+      <%= f.radio_button risk, 'unknown', class: "visuallyhidden" %>
+      <%= f.label risk, class: 'unknown_value' %> Clear
+    </legend>
+    <div class="form-group">
+      <%= f.label risk, value: true, class: 'block-label inline' do %>
+          <%= f.radio_button risk, true %> Yes
+      <% end %>
+      <%= f.label risk, value: false, class: 'block-label inline' do %>
+          <%= f.radio_button risk, false %> No
+      <% end %>
+      <div class="form-group optional-section">
+        <%= f.label "#{risk}_details", t('.labels.details') %>
+        <%= f.text_area "#{risk}_details", autocomplete: 'off', class: 'form-control', id: "#{risk}_details" %>
+      </div>
+    </div>
+  </div>
+</fieldset>
