--- a/app/views/escorts/index.html.erb
+++ b/app/views/escorts/index.html.erb
@@ -1,5 +1,14 @@
 <div class="grid-row">
   <div class="column-three-quarters">
-    <%= button_to t('.create_escort_button'), {action: :create}, {class: 'button'} %>
+    <header>
+      <h1><%= t('.heading') %></h1>
+      <p><%= t('.description') %></p>
+    </header>
+    <div class="form-group">
+      <%= button_to t('.create_escort_button'), {action: :create}, class: 'button' %>
+    </div>
+    <%= render('shared/search/form') %>
+    <%= render('shared/search/result') %>
+    <%= render('shared/search/no_result') %>
   </div>
 </div>
