Fix summary page heading
The heading value was attempting to use a forms name
attribute, as no form is present this breaks the page
when rendering is attempted.

--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="column-three-quarters">
     <header>
-      <h1><%= t("escorts.#{form.name}.heading") %></h1>
+      <h1><%= t(".heading") %></h1>
     </header>
     <%=
       render(
