--- a/app/assets/stylesheets/pdf/_typography.scss
+++ b/app/assets/stylesheets/pdf/_typography.scss
@@ -1,4 +1,4 @@
 body {
-  font-family: "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
-  font-size: small;
+  font-family: $font-family;
+  font-size: $base-print-font-size;
 }
