--- a/app/assets/stylesheets/pdf/_header.scss
+++ b/app/assets/stylesheets/pdf/_header.scss
@@ -1,23 +1,23 @@
 header {
   .copy-type {
-    padding: 0.2em 0.5em;
-    border: 0.1em solid $black;
+    padding: $bordered-unit-padding;
+    border: $border-black;
     text-transform: uppercase;
   }
   .row {
     clear: both;
-    padding-top: 0.3em;
+    padding-top: $padding-unit;
     &:first-child {
-      margin-bottom: 1em;
+      margin-bottom: $margin-bottom;
     }
     &:nth-child(2) {
-      border-bottom: 0.2em solid $dark_grey;
-      padding-bottom: 0.8em;
+      border-bottom: $border;
+      padding-bottom: $padding;
     }
   }
   .protective-marking {
     text-transform: uppercase;
-    font-size: 0.9em;
+    font-size: $smaller-print-font;
     margin-left: 32%;
   }
   h1 {
@@ -32,9 +32,9 @@ header {
     padding-top: 0.5em;
     float: right;
     strong {
-      padding: 0.2em 0.3em;
-      border: 0.1em solid $light_grey;
-      margin-left: 0.3em;
+      padding: $bordered-unit-padding;
+      border: $border;
+      margin-left: $margin-unit;
     }
   }
 }
