Add quick actions to all forms
Extracts the quick actions (containing the 'Prepare PDF' link)
to a partial and renders this on both existing views.

--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -1,6 +1,7 @@
 <div class="grid-row">
   <div class="column-one-quarter">
     <%= render('shared/navigation') %>
+    <%= render('shared/quick_actions') %>
   </div>
   <div class="column-three-quarters">
     <header>
