--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <style>
-    <%= Rails.application.assets['pdf.css'].to_s.html_safe %>
+    <%= PdfStylesheetBuilder.html_safe_pdf_stylesheet %>
   </style>
 </head>
 <body>
