--- a/app/views/shared/_risk.html.erb
+++ b/app/views/shared/_risk.html.erb
@@ -2,11 +2,10 @@
   <div class="form-group">
     <legend class="form-label-bold">
       <span>
-        <%= t(".types.#{risk}") %>
+        <%= t(".types.#{risk}.title") %>
       </span>
-      <%= f.radio_button risk, 'unknown', class: "visuallyhidden" %>
-      <%= f.label "#{risk}_unknown", 'Clear', class: 'unknown_value' %>
     </legend>
+    <p class="form-hint"><%= t(".types.#{risk}.help_text") %></p>
     <div class="form-group">
       <%= f.label risk, value: true, class: 'block-label inline' do %>
           <%= f.radio_button risk, true %> Yes
@@ -14,8 +13,12 @@
       <%= f.label risk, value: false, class: 'block-label inline' do %>
           <%= f.radio_button risk, false %> No
       <% end %>
+
+      <%= f.radio_button risk, 'unknown', class: "visuallyhidden" %>
+      <%= f.label "#{risk}_unknown", t('.labels.clear'), class: 'unknown_value' %>
+
       <div class="form-group optional-section">
-        <%= f.label "#{risk}_details", t('.labels.details') %>
+        <%= f.label "#{risk}_details", t(".types.#{risk}.details_help_text") %>
         <%= f.text_area "#{risk}_details", autocomplete: 'off', class: 'form-control', id: "#{risk}_details" %>
       </div>
     </div>
