Add HomePage with prisoner search functionality
We added the logic to search for prisoners with a valid prison number
on the homepage. If a result is found, it will show it with a link
on the prison number that brings to escort summary page.

--- a/app/views/home_pages/search/_result.html.erb
+++ b/app/views/home_pages/search/_result.html.erb
@@ -8,9 +8,9 @@
     <th scope="col"><%= t('.last_edited') %></th>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td><%= link_to escort.prisoner.prison_number, summary_path(escort) %></td>
+    <td><%= escort.prisoner.full_name %></td>
+    <td><%= escort.prisoner.formatted_date_of_birth %></td>
+    <td><%= escort.formatted_updated_at %></td>
   </tr>
 </table>
