--- a/app/views/escorts/_identification.html.erb
+++ b/app/views/escorts/_identification.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
   <%= f.label :prison_number, class: 'form-label-bold' %>
-  <%= f.text_field :prison_number, class: 'string form-control' %>
+  <%= f.object.prison_number %>
 </div>
 <div class="form-group">
   <%= f.label :family_name, class: 'form-label-bold' %>
