--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -1,8 +1,19 @@
 .search-wrapper {
+  .field_with_errors {
+    display: inline-block;
+    min-width: 50%;
+    border-left: none;
+    padding-left: 0;
+    margin-right: 0;
+    .form-control {
+      width: 100%;
+    }
+  }
+
   .button {
-    padding: 0.6em 0.6em 0.35em 0.6em;
+    padding: 0.4em 0.6em 0.25em 0.6em;
     .error & {
-      padding: 0.7em 0.5em 0.5em 0.5em;
+      padding: 0.5em 0.5em 0.35em 0.5em;
     }
   }
 }
