Update header to reflect new design
Extracts the header to a partial and updates the
HTML and SASS to reflect new header design.

--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -22,6 +22,7 @@ $row-margin: ceil(($margin-unit * 1.5));
 $padding-unit: 0.5em;
 $row-margin: $margin-unit * 3;
 $bordered-unit-padding: ($padding / 3);
+$font-weight-standard: 400;
 
 // Composites
 $font-family: "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
