--- a/app/assets/stylesheets/pdf/_header.scss
+++ b/app/assets/stylesheets/pdf/_header.scss
@@ -1,40 +1,7 @@
 header {
-  .copy-type {
-    padding: $bordered-unit-padding;
-    border: $border-black;
-    text-transform: uppercase;
-  }
-  .row {
-    clear: both;
-    padding-top: $padding-unit;
-    &:first-child {
-      margin-bottom: $margin-bottom;
-    }
-    &:nth-child(2) {
-      border-bottom: $border;
-      padding-bottom: $padding;
-    }
-  }
-  .protective-marking {
-    text-transform: uppercase;
-    font-size: $smaller-print-font;
-    margin-left: 32%;
-  }
-  h1 {
-    @extend .visuallyhidden;
-  }
+  border-bottom: $border;
   h2 {
-    display: inline-block;
-    font-weight: normal;
-    margin: 0;
-  }
-  .date-of-travel {
-    padding-top: 0.5em;
-    float: right;
-    strong {
-      padding: $bordered-unit-padding;
-      border: $border;
-      margin-left: $margin-unit;
-    }
+    font-weight: $font-weight-standard;
+    margin-bottom: $margin-unit;
   }
 }
