--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -2,4 +2,5 @@
 @import "pdf/helper_classes";
 @import "pdf/typography";
 @import "pdf/header";
+@import "pdf/not_for_release";
 @import "pdf/prisoner_information";
