--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -8,14 +8,16 @@ $background_grey: #E0E3E3;
 // Sizes
 $base-print-font-size: 13px;
 $smaller-print-font: ($base-print-font-size * 0.9);
-$input-height: 1.6em;
-$input-min-width: 2em;
-$input-margin: 1em;
+$check-box-width: 1em;
+$check-box-height: 1em;
 $input-padding: 0.6em 0 0 0.5em;
-$year-input-min-width: ceil(($input-min-width * 2));
 $padding: 1em;
 $border-width: 0.1em;
+$input-height: 1.6em;
+$input-min-width: 2em;
+$year-input-min-width: ceil(($input-min-width * 2));
 $margin-unit: 0.5em;
+$input-margin: ceil(($margin-unit * 2));
 $margin-bottom: ceil(($margin-unit * 2));
 $margin-top: ceil(($margin-unit * 2));
 $row-margin: ceil(($margin-unit * 1.5));
