--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -6,9 +6,8 @@
   </style>
 </head>
 <body>
-<%=
-  render('pdfs/header')
-%>
+<%= render('pdfs/header') %>
+<%= render('pdfs/not_for_release') %>
 <%=
   render(
       'pdfs/prisoner_information',
