Add move information

--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -3,4 +3,5 @@
 @import "pdf/typography";
 @import "pdf/header";
 @import "pdf/not_for_release";
+@import "pdf/move_information";
 @import "pdf/prisoner_information";
