--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -8,6 +8,7 @@
 <body>
 <%= render('pdfs/header') %>
 <%= render('pdfs/not_for_release') %>
+<%= render('pdfs/move_information') %>
 <%=
   render(
       'pdfs/prisoner_information',
