Add front page markers
Introduces 'Yes'/'No' pattern for Risks, Offence and Healthcare
information on the cover sheet.

--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -11,6 +11,8 @@ $smaller-print-font: ($base-print-font-size * 0.9);
 $check-box-width: 1em;
 $check-box-height: 1em;
 $input-padding: 0.6em 0 0 0.5em;
+$padding-unit: 0.5em;
+$padding-small: ($padding-unit / 2);
 $padding: 1em;
 $border-width: 0.1em;
 $input-height: 1.6em;
@@ -19,9 +21,9 @@ $year-input-min-width: ceil(($input-min-width * 2));
 $margin-unit: 0.5em;
 $input-margin: ceil(($margin-unit * 2));
 $margin-bottom: ceil(($margin-unit * 2));
+$margin-right: ceil(($margin-unit * 2));
 $margin-top: ceil(($margin-unit * 2));
 $row-margin: ceil(($margin-unit * 1.5));
-$padding-unit: 0.5em;
 $row-margin: $margin-unit * 3;
 $bordered-unit-padding: ($padding / 3);
 $font-weight-standard: 400;
