--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -5,3 +5,4 @@
 @import "pdf/not_for_release";
 @import "pdf/move_information";
 @import "pdf/prisoner_information";
+@import "pdf/front_page_markers";
