Use Cells gem to handle view objects
see: https://github.com/apotonick/cells

--- a/app/views/escorts/summary.html.erb
+++ b/app/views/escorts/summary.html.erb
@@ -7,11 +7,6 @@
     <header>
       <h1><%= t(".heading") %></h1>
     </header>
-    <%=
-      render(
-        'escorts/summary/prisoner_information',
-        prisoner_information: @summary.prisoner_information
-      )
-    %>
+    <%= cell(:prisoner_information, escort.prisoner) %>
   </div>
 </div>
