--- a/app/cells/prisoner_information/show.erb
+++ b/app/cells/prisoner_information/show.erb
@@ -1,40 +1,40 @@
 <div class="summary-heading">
   <h2><%= t('.heading') %></h2>
-  <%= link_to t('.edit_section'), prisoner_information.edit_section_path %>
+  <%= link_to t('.edit_section'), identification_path(escort) %>
 </div>
 <div class="summary-content">
   <div>
     <div class="family-name">
       <strong class="label"><%= t('.family_name') %></strong>
-      <div class="output"><%= prisoner_information.family_name %></div>
+      <div class="output"><%= family_name %></div>
     </div>
     <div class="forenames">
       <strong class="label"><%= t('.forenames') %></strong>
-      <div class="output"><%= prisoner_information.forenames %></div>
+      <div class="output"><%= forenames %></div>
     </div>
   </div>
   <div>
     <div class="dob">
       <strong class="label"><%= t('.date_of_birth') %></strong>
-      <div class="output"><%= prisoner_information.date_of_birth %></div>
+      <div class="output"><%= formatted_date_of_birth %></div>
     </div>
     <div class="age">
       <strong class="label"><%= t('.age') %></strong>
-      <div class="output"><%= prisoner_information.age %></div>
+      <div class="output"><%= age %></div>
     </div>
     <div class="sex">
       <strong class="label"><%= t('.sex') %></strong>
-      <div class="output"><%= prisoner_information.sex %></div>
+      <div class="output"><%= capitalized_sex %></div>
     </div>
     <div class="nationality">
       <strong class="label"><%= t('.nationality') %></strong>
-      <div class="output"><%= prisoner_information.nationality %></div>
+      <div class="output"><%= nationality %></div>
     </div>
   </div>
   <div>
     <div class="prison-number">
       <strong class="label"><%= t('.prison_number') %></strong>
-      <div class="output"><%= prisoner_information.prison_number %></div>
+      <div class="output"><%= prison_number %></div>
     </div>
   </div>
 </div>
