Add healthcare risks

--- a/app/views/pdfs/_risk_summary.html.erb
+++ b/app/views/pdfs/_risk_summary.html.erb
@@ -4,7 +4,7 @@
       <h2><%= t('.heading') %></h2>
     </div>
     <div class="identifiers">
-      <span class="label"><%= t('.identifiers_label') %></span>
+      <span class="label"><%= t('pdfs.shared.identifiers_label') %></span>
       <div class="input"></div>
     </div>
   </div>
