Add healthcare risks

--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -18,5 +18,6 @@
 <%= render('pdfs/front_page_markers') %>
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary') %>
+<%= render('pdfs/healthcare_needs') %>
 </body>
 </html>
