--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -19,5 +19,6 @@
 <%= render('pdfs/updates') %>
 <%= render('pdfs/risk_summary') %>
 <%= render('pdfs/healthcare_needs') %>
+<%= render('pdfs/medication') %>
 </body>
 </html>
