Add healthcare completed by and updates section

--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -124,12 +124,12 @@
 .bordered-table {
   width: 100%;
   text-align: left;
-  margin-top: $margin-unit;
   border-collapse: collapse;
+  background-color: $white;
   th, td {
-    border: 1px solid $light_grey;
+    border: 1px solid $dark_grey;
     padding: $padding-unit;
     font-weight: normal;
-    height: 2em;
+    height: 1.7em;
   }
 }
