--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -20,5 +20,6 @@
 <%= render('pdfs/risk_summary') %>
 <%= render('pdfs/healthcare_needs') %>
 <%= render('pdfs/medication') %>
+<%= render('pdfs/healthcare_updates') %>
 </body>
 </html>
