--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -9,3 +9,5 @@
 @import "pdf/updates";
 @import "pdf/risk_summary";
 @import "pdf/healthcare_information";
+@import "pdf/medication";
+@import "pdf/healthcare_updates";
