Add offence section

--- a/app/assets/stylesheets/pdf/_healthcare_updates.scss
+++ b/app/assets/stylesheets/pdf/_healthcare_updates.scss
@@ -2,6 +2,7 @@
   @extend .light-background;
   @extend .padded;
   padding-bottom: $padding-unit;
+  margin-bottom: $margin-bottom;
   .updates {
     margin-top: $margin-top;
     margin-bottom: $margin-bottom;
