--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -97,6 +97,7 @@
   @extend .row;
   padding-bottom: $padding-unit;
   border-bottom: 1px solid $dark_grey;
+  page-break-before: always;
   > div {
     @extend .col;
     padding-bottom: 0;
