--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -21,5 +21,6 @@
 <%= render('pdfs/healthcare_needs') %>
 <%= render('pdfs/medication') %>
 <%= render('pdfs/healthcare_updates') %>
+<%= render('pdfs/offences') %>
 </body>
 </html>
