--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -7,6 +7,7 @@ $background_grey: #E0E3E3;
 
 // Sizes
 $base-print-font-size: 13px;
+$heading-font-size: $base-print-font-size * 1.5;
 $smaller-print-font: ($base-print-font-size * 0.9);
 $check-box-width: 1em;
 $check-box-height: 1em;
