--- a/app/views/pdfs/_header.html.erb
+++ b/app/views/pdfs/_header.html.erb
@@ -1,3 +1,16 @@
 <header class="first-page">
-  <h2><%= t('.title') %></h2>
+  <div class="section-heading">
+    <h1><%= t('.title') %></h1>
+    <div class="heading">
+      <h2><%= t('.heading') %></h2>
+    </div>
+    <div class="vehicle_reg">
+      <span class="label"><%= t('.vehicle_registration') %></span>
+      <div class="input"></div>
+    </div>
+    <div class="cell_no">
+      <span class="label"><%= t('.vehicle_cell_number') %></span>
+      <div class="input"></div>
+    </div>
+  </div>
 </header>
