--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -106,7 +106,7 @@
   h2 {
     display: inline;
   }
-  .identifiers {
+  .persistent_info {
     text-align: right;
     .label {
       @extend .label-inline;
