--- a/app/assets/stylesheets/pdf/_not_for_release.scss
+++ b/app/assets/stylesheets/pdf/_not_for_release.scss
@@ -1,21 +1,27 @@
 .not-for-release {
   @extend .light-background;
   margin-top: $margin-top;
+
   > div {
     @extend .row;
   }
+
   .marker {
     @extend .padded;
     @extend .col;
   }
+
   .reason {
     @extend .padded;
     @extend .col;
+
     strong {
       float: left;
     }
+    
     .input {
-      width: 30.461em;
+      width: 33.8em;
+      margin-bottom: 0;
     }
   }
 }
